--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -161,12 +161,12 @@ amet consectetuer </a></h6>
 				
 				<!--  listagem de livros --->
 
-				{% for livros in lista_livros %}
+				{% for livro in lista_livros %}
 				<div class="col-md-9 product1">
 				<div class=" bottom-product">
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="{% url 'livro_detalhes' %}">{{ livros.capa | add_class:"img-responsive" }}
+							<a href="{% url 'livro_detalhes' %}">{{ livro.capa | add_class:"img-responsive" }}
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
